--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,11 @@ services:
     depends_on:
      - redis
      - postgres
+    environment: 
+     - REDIS_URL=redis://redis:6379
+     - DATABASE_URL=postgres://postgres:5432/?sslmode=disable
+     - DEBUG=1
+    command: [ "/go/src/github.com/travis-ci/cloud-brain/bin/cloudbrain-http" ]
   cloudbrain-create-worker:
     build: .
     volumes:
@@ -22,6 +27,12 @@ services:
     depends_on:
      - redis
      - postgres
+    environment: 
+     - REDIS_URL=redis://redis:6379
+     - DATABASE_URL=postgres://postgres:5432/?sslmode=disable
+     - DEBUG=1
+     - CLOUDBRAIN_DATABASE_ENCRYPTION_KEY=e266185db2078529ebfc4e3e93767491e266185db2078529ebfc4e3e93767491
+    command: [ "/go/src/github.com/travis-ci/cloud-brain/bin/cloudbrain-create-worker" ]
   cloudbrain-refresh-worker:
     build: .
     volumes:
@@ -29,6 +40,12 @@ services:
     depends_on:
      - redis
      - postgres
+    environment: 
+     - REDIS_URL=redis://redis:6379
+     - DATABASE_URL=postgres://postgres:5432/?sslmode=disable
+     - DEBUG=1
+     - CLOUDBRAIN_DATABASE_ENCRYPTION_KEY=e266185db2078529ebfc4e3e93767491e266185db2078529ebfc4e3e93767491
+    command: [ "/go/src/github.com/travis-ci/cloud-brain/bin/cloudbrain-refresh-worker" ]
   redis:
     image: redis
     expose: 
