--- a/sqitch/sqitch.conf
+++ b/sqitch/sqitch.conf
@@ -4,6 +4,8 @@
 	target = db:pg:cloudbrain_test
 [target "cloudbrain_test"]
 	uri = db:pg:cloudbrain_test
+[target "docker_cloudbrain"]
+  uri = db:postgres://cloudbrain:travis@postgres:5432
 [deploy]
 	verify = true
 [rebase]
